[build-system]
requires = ["scikit-build-core", "pybind11"]
build-backend = "scikit_build_core.build"

[project]
name = "pylupnt"
version = "0.0.1"
description = "Lunar Positioning, Navigation, and Timing (PNT) library"
readme = "README.md"
license = {text = "MIT"}
authors=[
    {name="Guillem Casadesus Vila", email="guillemc@stanford.edu"},
    {name="Keidai Iiyama",          email="kiiyama@stanford.edu"},
]
maintainers=[
    {name="Guillem Casadesus Vila", email="guillemc@stanford.edu"},
    {name="Keidai Iiyama",          email="kiiyama@stanford.edu"},
]
requires-python = ">=3.12,<3.13"
dependencies = [
    "numpy",
    "astropy",
    "auto_mix_prep",
    # "bpy",
    "dataset",
    "filterpy",
    "mathutils",
    "matplotlib",
    "mlflow",
    "mlflow_skinny",
    "networkx",
    "numba",
    "onnx",
    "pandas",
    "Pillow",
    "plotly",
    "scikit_learn",
    "scipy",
    "setuptools",
    "spiceypy",
    "torch",
    "torchvision",
    "tqdm",
    "mypy",
    "ipywidgets",
]
keywords = ["pybind11", "cibuildwheel", "c++", "pypi", "numpy", "simple", "example", "wheel", "pypi", "conda-forge"]
classifiers=[
    "Programming Language :: C++",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
    "Operating System :: MacOS :: MacOS X",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: POSIX :: Linux",
    "License :: OSI Approved :: MIT License",
]

[project.urls]
Github = "https://github.com/Stanford-NavLab/LuPNT"
Documentation = "https://lupnt.readthedocs.io"

[project.optional-dependencies]
test = ["pytest"]
docs = [
    "cmake",
    "breathe",
    "sphinx_rtd_theme",
    "notebook",
    "sphinx",
    "exhale",
    "breathe",
    "m2r",
    "nbsphinx",
    "nbsphinx-link",
    "jinja2",
    "lxml_html_clean",
]

[tool.scikit-build]
wheel.packages = ["source/python/pylupnt"]
cmake.source-dir = "source/python"

[tool.cibuildwheel]
test-extras = "test"
test-command = "python -m pytest {project}/test/python -v"
test-skip = "pp* *-musllinux* *-manylinux_i686"
